--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "axios": "^1.2.2",
     "firebase": "^9.15.0",
     "formik": "^2.2.9",
+    "framer-motion": "^9.0.4",
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.1",
@@ -23,6 +28,7 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "swapi-wrapper": "^1.0.0",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
